# iqdb-types

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: types.rs  vector_new.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v1.0.0.md
examples/: errors.rs  metadata_and_filters.rs  search.rs  serde_roundtrip.rs  vectors.rs
src/: error.rs  filter.rs  hit.rs  id.rs  lib.rs  metadata.rs  metric.rs  search.rs  vector.rs
tests/: consumer_simulation.rs  edge_cases.rs  error_reason.rs  properties.proptest-regressions  properties.rs  smoke.rs  vector_id_display.rs
