# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-types"
version = "0.3.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Foundational vector-database types for the iQDB family - the shared vocabulary every iQDB crate speaks."

# Keywords (5 max)
keywords = [
    "vector-database",
    "types",
    "embeddings",
    "iqdb",
    "similarity"
]

# Categories
categories = [
    "data-structures",
    "database-implementations"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-types"
repository    = "https://github.com/jamesgober/iqdb-types"
documentation = "https://docs.rs/iqdb-types"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_types"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
# Default build: the pure type surface, std-only, no optional dependencies.
default = []
# Derive `serde::Serialize`/`Deserialize` on the public types.
serde = ["dep:serde"]
# Exposes `Vector::new_unchecked`, the test-only escape hatch for constructing
# a `Vector` without the empty/non-finite validation `Vector::new` enforces.
# A production build without this feature cannot build invalid vectors.
testing = []


# DEPENDENCIES
# #################################
[dependencies]
# Domain error metadata (kind/caption) — the portfolio error standard.
error-forge = "1.0.0"
# Optional, additive serialization support behind the `serde` feature.
serde = { version = "1", features = ["derive"], optional = true }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Needed in the integration-test crate to name the `ForgeError` trait when
# asserting `IqdbError::kind` (integration tests cannot see normal deps).
error-forge = "1.0.0"
# serde round-trip coverage in tests + the serde example (run under
# --all-features).
serde_json = "1"
# Property-based coverage of the type contracts (validation, ordering,
# Display, serde round-trips) per dev/DIRECTIVES.md §5 and §8.
proptest = "1"
# Benchmark harness for the one measurable hot path (Vector::new validation).
criterion = { version = "0.5", features = ["html_reports"] }


# BENCHMARKS
# #################################
[[bench]]
name    = "vector_new"
harness = false


# EXAMPLES
# #################################
# The serde example exercises the gated `Serialize`/`Deserialize` impls, so it
# only builds when the `serde` feature is on. Run it with:
#   cargo run --example serde_roundtrip --features serde
[[example]]
name              = "serde_roundtrip"
required-features = ["serde"]


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
